...
    },
    "action.done": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
          }
        }
      }
    },
    "action.refresh": {
      "localizations": {
...
    },
    "settings.title": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
        }
      }
    },
    "station.detail.title": {
      "localizations": {
...
